--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html, body {
+  overflow-x: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.custom-gradient-315 {
+  background: #605BFF;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.custom-grad {
+  background:#504bd5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.custom-grad2{
+  background: #B7E9F640;
 }
 
-.App-link {
-  color: #61dafb;
+.custom-black{
+  background:#161616;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.custom-darkblack{
+  background: #0D0D0D;
+}
+
+.cutom-formblack{
+  background: #161616;
+}
+
+.custom-burcolor{
+  background:#605BFF;
+}
+
+.custom-txtcolor{
+  background: #858585;
+}
+
+.custom-btnback{
+  background: #3D3D3D;
+}
+
+.custom-white{
+  background: #F5F5F5;
+}
+.custom-forwhite{
+  background: #FFFFFF;
+}
+
+.custom-btnwhite{
+  background:#F2F2F2
+}
+
+.custom-bckformwhite{
+  background: #EAEAEA;
+};
+
+.custom-dashbckcolor {
+  background: linear-gradient(90deg, rgba(172, 169, 255, 0.91) 0%, rgba(172, 169, 255, 0) 91.25%) !important;
+}
+
+.custom-border{
+border: 1px solid;
+border-image-source: linear-gradient(0deg, #212121, #212121),
+linear-gradient(0deg, rgba(255, 255, 255, 0.08), rgba(255, 255, 255, 0.08));
 }
